@@ -896,7 +896,7 @@ pm-boron-extraction=Boron extraction
 pm-diluted-boric-acid=Sassolite seperation
 pm-quartzite-leeching=Quartzite leeching
 pm-high-quality-quartzite-seperation=High quality quartzite seperation
-pm-low-quality-quartzite-seperation=low quality quartzite seperation
+pm-low-quality-quartzite-seperation=Low quality quartzite seperation
 pm-silicon-tetrachloride-handling=Silicon tetrachloride handling
 pm-chunk-slag-leeching=Chunk ore slag leeching
 pm-transition-aluminium-leeching=Transition aluminium leeching
@@ -1114,7 +1114,7 @@ pm-anhydrite-seperation=Anhydrite seperation
 pm-potash-potassium=Potash-based potassium
 pm-70-to-100-rubidium-alum=70% to 100% rubidium alum
 pm-50-to-70-rubidium-alum=50% to 70% rubidium alum
-pm-30-to-50-rubidium-alum=305 to 50% rubidium alum
+pm-30-to-50-rubidium-alum=30% to 50% rubidium alum
 pm-rubidium-alum-seperation=Rubidium alum seperation
 pm-pollucite-leeching=Pollucite leeching
 pm-pollucite-crushing=Pollucite crushing
