@@ -2172,14 +2172,14 @@ data:extend({
     allow_productivity = true,
     ingredients =
     {
-      PM.ingredient("pm-platinum-plate", 6),
-      PM.ingredient("pm-nickel-plate", 6),
+      PM.ingredient("pm-platinum-plate", 4),
+      PM.ingredient("pm-nickel-plate", 4),
       PM.ingredient("pm-glass-pane", 8),
       PM.ingredient("pm-vacuum-tube-getter", 1)
     },
     results =
     {
-      PM.product("pm-vacuum-tube", 2)
+      PM.product("pm-vacuum-tube", 1)
     }
   },
   {
